--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "vue-cli-service serve",
+    "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "firebase-functions": "^3.14.1",
+    "firebase": "^8.7.1",
+    "firebase-tools": "^9.16.0",
     "v-mask": "^2.2.4",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vuefire": "^2.2.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
