--- a/package.json
+++ b/package.json
@@ -9,11 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "firebase": "^8.7.1",
-    "firebase-tools": "^9.16.0",
     "v-mask": "^2.2.4",
-    "vue": "^2.6.11",
-    "vuefire": "^2.2.5"
+    "vue": "^2.6.11"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
